// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.execution.run;

option java_multiple_files = true;

message NodeRunInfo {
  string whenCondition = 1;
  bool evaluatedCondition = 2;
  repeated ExpressionBlock expressions = 3;
}

message ExpressionBlock {
  string expression = 1;
  string expressionValue = 2;
  int32 count = 3;
}
